--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-$ git add README
+filter.php为过滤器分装类，内部包含了IP验证方法，URL验证方法，Email邮箱验证方法
+filterTest.php为上述封装类的测试文件
 
-$ git commit -m "first commit"
+sort.php为排序算法的封装类，内部包含了直接插入排序，冒泡排序，选择排序，基数排序，归并排序五种方法
+sortTest.php为上述封装类的测试文件
